Ver 1.1 FE - 항목 이름들 수정 BE - 생산계획 조회(일부 -> 전체)

--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/manage-part-bom.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/manage-part-bom.html
@@ -236,7 +236,7 @@
                                 <thead>
                                 <tr>
                                     <th class="col-2">회사</th>
-                                    <th class="col-2">부품 코드</th>
+                                    <th class="col-2">보그워너 품번</th>
                                     <th class="col-1">USAGE</th>
                                     <th class="col-1">
                                         <button type="button" class="btn btn-primary btn-sm"
