--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/manage-part-part.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/manage-part-part.html
@@ -52,10 +52,10 @@
                         <thead>
                         <tr>
                             <th class="col-1">회사</th>
-                            <th class="col-1">보그워너 코드</th>
-                            <th class="col-1">입고처리 코드</th>
-                            <th class="col-2">이름</th>
-                            <th class="col-1">공급업체 코드</th>
+                            <th class="col-1">보그워너 품번</th>
+                            <th class="col-1">납품등록 품번</th>
+                            <th class="col-2">품명</th>
+                            <th class="col-1">공급업체 품번</th>
                             <th class="col-1">발주 번호</th>
                             <th class="col-1">적입량</th>
                             <th class="col-1">위치</th>
