--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-log.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-log.html
@@ -168,8 +168,8 @@
                             <th colspan="1" class="table-danger" style="white-space: nowrap">불량</th>
                         </tr>
                         <tr>
-                            <th style="white-space: nowrap">공급자 코드</th>
-                            <th style="white-space: nowrap">보그워너 코드</th>
+                            <th style="white-space: nowrap">공급업체 품번</th>
+                            <th style="white-space: nowrap">보그워너 품번</th>
                             <!-- 입고 -->
                             <th class="table-info" style="white-space: nowrap">용차</th>
                             <th class="table-info">1</th>
