--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-manage.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-manage.html
@@ -286,8 +286,8 @@
                             <thead>
                             <tr>
                                 <th class="col-2">회사</th>
-                                <th class="col-2">보그워너 코드</th>
-                                <th class="col-2">부품업체 코드</th>
+                                <th class="col-2">보그워너 품번</th>
+                                <th class="col-2">부품업체 품번</th>
                                 <th class="col-2">발주 번호</th>
                                 <th class="col-2">이름</th>
                                 <th class="col-1">로트</th>
@@ -307,11 +307,11 @@
                     <table class="table table-striped">
                         <thead>
                         <tr>
-                            <th class="col-2">보그워너 코드</th>
+                            <th class="col-2">보그워너 품번</th>
                             <th class="col-1">로트</th>
                             <th class="col-1">수량</th>
-                            <th class="col-1">반영 전</th>
-                            <th class="col-1">반영 후</th>
+                            <th class="col-1">입고 전</th>
+                            <th class="col-1">입고 후</th>
                             <th class="col-1"></th>
                         </tr>
                         </thead>
