--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-stock.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/task-part-stock.html
@@ -55,8 +55,8 @@
                                 <thead>
                                 <tr>
                                     <th class="col-1">회사</th>
-                                    <th class="col-2">부품 코드</th>
-                                    <th class="col-2">공급자 코드</th>
+                                    <th class="col-2">보그워너 품번</th>
+                                    <th class="col-2">공급업체 품번</th>
                                     <th class="col-2">발주 번호</th>
                                     <th class="col-1">수량</th>
                                 </tr>
